fix footer spacing

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,6 @@ body {
 
 @media (max-width: 450px) {
   body{
-    margin-bottom: 400px;
+    margin-bottom: 200px;
   }
 }
